<?xml version="1.0"?>
<package format="2">
  <name>fastrtps_cmake_module</name>
  <version>0.0.0</version>
  <description>Provide CMake module to find eProsima FastRTPS.</description>
  <maintainer email="ricardogonzalez@eprosima.com">Ricardo Gonzalez</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
</package>
